<resources>
    <string name="app_name">Laundry</string>
    <string name="laundry_servies">Laundry Service</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="cancelorder">Cancel Order</string>
    <string name="please_wait">Please Wait</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="intro_1">intro_1</string>
    <string name="heading_2">heading_2</string>
    <string name="intro_2">intro_2</string>
    <string name="heading_3">heading_3</string>
    <string name="intro_3">intro_3</string>
    <string name="close_msg">Are you sure want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fname">Full Name</string>
    <string name="send">Send</string>
    <string name="sendc">SEND</string>
    <string name="pnumber">Phone Number</string>
    <string name="val_email">Please enter email id.</string>
    <string name="val_num">Please enter mobile number</string>
    <string name="val_name">Please Enter Name.</string>
    <string name="val_pdate">Please Enter Pickup Date</string>
    <string name="val_ptime">Please Enter Pickup Time</string>
    <string name="val_ddate">Please Enter Delivery Date</string>
    <string name="val_dtime">Please Enter Delivery Time</string>
    <string name="val_Item">Please Select Service To Proceed Next</string>
    <string name="val_pass">Password must contain at least 6 characters.</string>
    <string name="pass_notmatch">Password need to be same</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="nearby">Near By</string>
    <string name="profile">Profile</string>
    <string name="loginc">LOGIN</string>
    <string name="login">Login</string>
    <string name="already">ALready Have An Account?</string>
    <string name="signupC">SIGN UP</string>
    <string name="signup">Sign Up</string>
    <string name="wlcome">Welcome Back</string>
    <string name="password">Password</string>
    <string name="booking">Booking</string>
    <string name="cpassword">Confirm Password</string>
    <string name="forgetpassword">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fill_your_email">Enter The Email Address Associate With Your Account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="have_a_promo">Have A PromoCode?</string>
    <string name="enter_a_promo">Enter PromoCode</string>
    <string name="applied_code">Applied Code</string>
    <string name="addDate">Add Date &amp; Time</string>
    <string name="enterdeliverytime">Enter Delivery Time</string>
    <string name="enterdeliverydate">Enter Delivery Date</string>
    <string name="enterpickuptime">Enter Pickup Time</string>
    <string name="enterpickupdate">Enter Pickup Date</string>
    <string name="closeMsg">Are You Sure You Want To Close Laundry?</string>
    <string name="logoutMsg">Are You Sure You Want To Logout?</string>
    <string name="deleteMsg">Are You Sure You Want To Delete Laundry Account?</string>
    <string name="Laundary_service">Laundary Services</string>
    <string name="Laundary_care_service">Laundary Care Services</string>
    <string name="cloth_washing_fold">Cloth Washing &amp; Fold</string>
    <string name="thelaundry">The Laundry Shop Is Full Services</string>
    <string name="hours">24 Hours</string>
    <string name="TopServices">Top Services</string>
    <string name="services">All Services</string>
    <string name="offer">Offers</string>
    <string name="PopularLaundries">Popular Laundries</string>
    <string name="SpecialOffer">Special Packages &amp; Offer</string>
    <string name="Laundary_near">Laundary Near by</string>
    <string name="ViewAll">View All</string>
    <string name="Viewdetails">View Details</string>
    <string name="myorder">My Order</string>
    <string name="chat">Chat</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_if">Rate If You Liked Our Service</string>
    <string name="clothlist">Cloth List</string>
    <string name="entValNumber">Please Enter Valid Mobile Number</string>
    <string name="orderdetails">Order Details</string>
    <string name="monday">MonDay</string>
    <string name="copied">Promocode Copied To ClipBoard</string>
    <string name="tuesday">TuesDay</string>
    <string name="support">Support</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="cancelaccount">Cancel Account</string>
    <string name="account">Account</string>
    <string name="changepassword">Change Password</string>
    <string name="orderno">#1245893</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="select_address">Select Address &amp; Continue</string>
    <string name="select">Select</string>
    <string name="go_to_status">Go To Order Status</string>
    <string name="no_chat_history_found">No Chat History Found</string>
    <string name="pickedup">Picked Up</string>
    <string name="pickupAddress">Pickup Address</string>
    <string name="shopname">Shop Name</string>
    <string name="val_comment">Please enter comment</string>
    <string name="ordernum">Order No.</string>
    <string name="ordercanceled">Already Order Canceled</string>
    <string name="final_amount">Final Amount</string>
    <string name="thankfor">Thank You For Choosing Us!</string>
    <string name="your_pickup">Your Pickup Has Been Confirmed</string>
    <string name="inprocess">In Process</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="deliveryonly">Delivery</string>
    <string name="logout">Logout</string>
    <string name="price250">$250</string>
    <string name="price10">$10</string>
    <string name="notification">Notification</string>
    <string name="solve">solve</string>
    <string name="cod">Cash On Delivery</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="onlywash">Only Wash</string>
    <string name="shirt">x Shirt(Man) </string>
    <string name="payable">Payable Amount</string>
    <string name="paymath">Payment Method</string>
    <string name="title">Title</string>
    <string name="total">Total</string>
    <string name="edit">Edit</string>
    <string name="yourcloth">Your Clothes</string>
    <string name="addmore">Add More</string>
    <string name="preview">Preview Order</string>
    <string name="next">Next ></string>
    <string name="offers">45% Off Here Is Your Code Ends April 01</string>
    <string name="itemsadded">8 Items Added</string>
    <string name="itemsadd"> Items Added</string>
    <string name="totalprice">Total $75:00</string>
    <string name="no_ticket_found">No Ticket Found</string>
    <string name="submit">Submit</string>
    <string name="schedule_pickup">SCHEDULE A PICKUP</string>
    <string name="address">Address</string>
    <string name="openinghours">Opening Hours</string>
    <string name="taptoview">Tap To View On Map</string>
    <string name="aboutus">About US</string>
    <string name="optionwill">Option Will Be Available Soon.</string>
    <string name="about">The Laundry Shop Is A Full-Services Coin-OP Laundry Services. Dedicated to Consistently Providing High Customer Satisfaction By Rendring Reliable.</string>
    <string name="reviews">(4.5 Reviews)</string>
    <string name="review">Reviews)</string>
    <string name="val_description">Please Enter Description</string>
    <string name="val_title">Please Enter Title.</string>
    <string name="val_payment">Please Select Payment Method.</string>
    <string name="val_Address">Please Select Address</string>
    <string name="internet_connection">Please Enable Your Internet Connection.</string>
    <string name="discription">Discription</string>
    <string name="inprogress">In Progress</string>
    <string name="pending">Pending</string>
    <string name="addticket">Add Ticket</string>
    <string name="msgadmin">Message By Admin Team Resolution Message</string>
    <string name="laundryticket">Laundry Ticket :-</string>
    <string name="trackthrough">Track Your Parcel Through any of our supported couriers and carriers</string>
    <string name="related">Related To Chat With</string>
    <string name="services_not">Service Not Available</string>
    <string name="Choose">Choose Your Clothes</string>
    <string name="wash">Get Top Wash Facilities</string>
    <string name="dummuydata">Choose your cloths By using this app you can select your clothes for laundry in a very simple manner.</string>
    <string name="dummuydata2">Get top wash facilities Get top wash services form your nearby laundry shop at very reasonable cost.</string>
    <string name="dummuydata3">Get on time delivery Shops delivery services provides you "A better way of delivering"</string>
    <string name="delivery">Get On Time Delivery</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <string name="SchedulePikcup">Schedule Pikcup</string>
    <string name="AddAddress">Add Address</string>
    <string name="SelectArea">Select Area</string>
    <string name="CompAddress">Complete Address</string>
    <string name="pinLocation">Pin Your Location</string>
    <string name="Contactnum">Contact Number</string>
    <string name="Home">Home</string>
    <string name="areyou">Are You Sure Want To Cancel This Order?</string>
    <string name="paidvia">Paid Via</string>
    <string name="discount">Discount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="Work">Work</string>
    <string name="rejected">Rejected</string>
    <string name="update">UPDATE</string>
    <string name="write_your_message">Write A Message</string>
    <string name="Other">Other</string>
    <string name="calldeliveryagent">Call Delivery Agent</string>
    <string name="callif">If Any Issue So Call Delivery Agent</string>
    <string name="msgagent">Message The Delivery Agent </string>
    <string name="msgif">If Any Issue So Message Delivery Agent</string>
    <string name="pickupdate">Pickup Date &amp; Time</string>
    <string name="deliverydate">Delivery Date &amp; Time</string>
    <string name="saveContinue">SAVE AND CONTINUE</string>
    <string name="Wherehouldwedeliver">Where should we deliver?"</string>
    <string name="enter_pass">Please enter password.</string>
    <string name="Old_Password">Old Password </string>
    <string name="New_password">New Password</string>
    <string name="Retype_password">Retype Password</string>
    <string name="enter_new_pass">Please enter new password.</string>
    <string name="saveChng">Save Changes</string>
    <string name="search">Search Laundry Name And Place</string>
    <string name="changpass">Change Password</string>
    <string name="addname">Please Add Name</string>
    <string name="addAddress">Please Add Address</string>
    <string name="password_required_validation">Please Enter Current Password.</string>
</resources>