<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">


    <com.laundry.bubbles.utils.CustomTextViewMuliBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddAddress"
        android:textSize="@dimen/_16sdp"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/black"/>



 <com.laundry.bubbles.utils.CustomTextViewMuliBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectArea"
        android:textSize="@dimen/_14sdp"
     android:layout_marginTop="@dimen/_10sdp"
     android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/darkgray"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.laundry.bubbles.utils.CustomTextViewMuliBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CompAddress"
            android:textSize="@dimen/_14sdp"
            android:layout_weight="1"
            android:textColor="@color/darkgray"/>

        <com.laundry.bubbles.utils.CustomTextViewpoppins_bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinLocation"
            android:textSize="@dimen/_14sdp"
            android:gravity="end"
            android:layout_weight="1"

            android:textColor="@color/colorAccent"/>



    </LinearLayout>



    <com.laundry.bubbles.utils.CustomTextViewMuliBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Schme number 485 vijynagar"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"/>


    <com.laundry.bubbles.utils.CustomTextViewMuliBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contactnum"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"

        android:textColor="@color/darkgray"/>

    <com.laundry.bubbles.utils.CustomTextViewMuliBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="98656456589"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/_3sdp"

        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"/>


    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Home"/>


        <RadioButton
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work"/>


        <RadioButton
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Other"/>





    </LinearLayout>



        <RelativeLayout
            android:background="@drawable/ic_longbtn"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:layout_height="@dimen/_40sdp">

            <com.laundry.bubbles.utils.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/saveContinue"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>




        </RelativeLayout>






</LinearLayout>
</layout>
