<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <com.laundry.bubbles.utils.CustomTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.laundry.bubbles.utils.CustomTextView
            android:id="@+id/ctvAboutUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about"
            />


        <com.laundry.bubbles.utils.CustomTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.gms.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/mvAddress"/>


        <com.laundry.bubbles.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/taptoview"
            android:id="@+id/ctvTap"
            />
        <com.laundry.bubbles.utils.CustomTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/openinghours"
            android:textColor="@color/black"
            />
        <com.laundry.bubbles.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:drawableLeft="@drawable/online_circle"
            android:text="@string/taptoview"
            android:id="@+id/ctvOnTime"
            />
        <com.laundry.bubbles.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:drawableLeft="@drawable/online_circle"
            android:text="@string/taptoview"
            android:id="@+id/ctvOffTime"
            />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            android:id="@+id/cvSchedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/colorPrimary"
            >

            <com.laundry.bubbles.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/schedule_pickup"
                android:textAlignment="center"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>
