<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.laundry.bubbles.utils.CustomTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ctvline"
            android:text="@string/rate_now"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/ctvHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <com.laundry.bubbles.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ctvHead"
        android:text="@string/rate_if"
        android:id="@+id/ctvline"/>
        <RatingBar
            app:layout_constraintTop_toBottomOf="@id/ctvline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/rbReview"
            style="@style/RatingBarMy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBarMy" />


    <com.laundry.bubbles.utils.CustomButton
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/cbCancelDailog"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/shape_for_gradientround"
        app:layout_constraintTop_toBottomOf="@id/rbReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cbCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/cancel"/>
    <com.laundry.bubbles.utils.CustomButton
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/cbCancel"
        android:text="@string/submit"
        android:layout_margin="@dimen/_5sdp"
        android:textColor="@color/white"
        android:background="@drawable/shape_for_rectangleblueround"
        app:layout_constraintLeft_toRightOf="@id/cbCancelDailog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbReview"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
